--- a/templates/App_Blog/blog_details.html
+++ b/templates/App_Blog/blog_details.html
@@ -18,4 +18,35 @@
   </p>
   <hr>
 
+  
+   </div>
+  {% if not liked %}
+  <a href="{% url 'App_Blog:liked_post' pk=blog.pk %}">
+    <i class="fa fa-thumbs-o-up fa-2x" aria-hidden="true"></i>
+  </a>
+  {% else %}
+  <a href="{% url 'App_Blog:unliked_post' pk=blog.pk %}">
+    <i class="fa fa-thumbs-o-down fa-2x" aria-hidden="true"></i>
+  </a>
+  {% endif %}
+  <div class="row">
+    <div class="col-sm-6">
+      <hr>
+      <h5>Comments:</h5>
+      {% for comment in blog.blog_comment.all %}
+      <p><a href="#">@{{comment.user}}</a> {{comment.comment}}<br><h6>{{comment.comment_date}}</h6></p>
+      {% endfor %}
+    </div>
+    <div class="col-sm-6">
+      <form method="POST">
+        {{ comment_form|crispy }}
+        {% csrf_token %}
+        <button type="submit" class="btn btn-primary btn-sm">Comment</button>
+      </form>
+    </div>
+
   </div>
+  <br>
+  <br>
+
+  {% endblock %}
